--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@glimmer/tracking": "^1.0.4",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-auto-import": "^1.11.3",
+    "broccoli-static-site-json": "^4.4.1",
+    "ember-auto-import": "^2.6.3",
     "ember-cli": "~3.28.4",
     "ember-cli-app-version": "^5.0.0",
     "ember-cli-babel": "^7.26.6",
@@ -40,11 +41,13 @@
     "ember-cli-netlify": "^0.4.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
+    "ember-data": "^4.12.0",
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.1.1",
     "ember-get-config": "^0.5.0",
     "ember-load-initializers": "^2.1.2",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-moment": "^10.0.0",
     "ember-page-title": "^7.0.0",
     "ember-qunit": "^5.1.4",
     "ember-resolver": "^8.0.2",
@@ -64,10 +67,22 @@
     "qunit": "^2.16.0",
     "qunit-dom": "^1.6.0"
   },
+  "fastbootDependencies": [
+    "crypto"
+  ],
   "engines": {
     "node": "12.* || 14.* || >= 16"
   },
   "ember": {
     "edition": "octane"
+  },
+  "ember-addon": {
+    "paths": [
+      "lib/content-generator"
+    ]
+  },
+  "dependencies": {
+    "moment-timezone": "^0.5.43",
+    "webpack": "^5.82.0"
   }
 }
