--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@glimmer/tracking": "^1.0.4",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-auto-import": "^1.11.3",
     "ember-cli": "~3.28.4",
     "ember-cli-app-version": "^5.0.0",
     "ember-cli-babel": "^7.26.6",
@@ -45,6 +44,7 @@
     "ember-get-config": "^2.1.1",
     "ember-load-initializers": "^2.1.2",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-moment": "^10.0.0",
     "ember-page-title": "^7.0.0",
     "ember-qunit": "^5.1.4",
     "ember-resolver": "^8.0.2",
@@ -58,6 +58,7 @@
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-qunit": "^6.2.0",
     "loader.js": "^4.7.0",
+    "moment": "^2.29.4",
     "npm-run-all": "^4.1.5",
     "prember": "^1.0.5",
     "prettier": "^2.3.2",
@@ -69,5 +70,11 @@
   },
   "ember": {
     "edition": "octane"
+  },
+  "peerDependencies": {
+    "moment": "^2.29.4"
+  },
+  "dependencies": {
+    "ember-auto-import": "^2.6.3"
   }
 }
