--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ember/test-helpers": "^2.4.2",
     "@glimmer/component": "^1.0.4",
     "@glimmer/tracking": "^1.0.4",
+    "@iconify/ember": "^2.1.0",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "ember-cli": "~3.28.4",
@@ -58,7 +59,6 @@
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-qunit": "^6.2.0",
     "loader.js": "^4.7.0",
-    "moment": "^2.29.4",
     "npm-run-all": "^4.1.5",
     "prember": "^1.0.5",
     "prettier": "^2.3.2",
@@ -70,9 +70,6 @@
   },
   "ember": {
     "edition": "octane"
-  },
-  "peerDependencies": {
-    "moment": "^2.29.4"
   },
   "dependencies": {
     "ember-auto-import": "^2.6.3"
